Ensure feature panel title bar is fully visible

--- a/hsreplaynet/static/styles/home_new.scss
+++ b/hsreplaynet/static/styles/home_new.scss
@@ -200,6 +200,7 @@
 			line-height: 48px;
 			display: flex;
 			font-variant: small-caps;
+			z-index: 1;
 
 			> span {
 				flex: 1 1 0;
